experiment_output/error_log/nondex-HugoWang3146-spring-demo-gradle-k8s.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task800/wd/NonDex-plugin-test/github.com/HugoWang3146/spring-demo-gradle-k8s/src/main/java/indi/wh/config/ApplicationConfig.java:13: error: cannot find symbol
@AllArgsConstructor(onConstructor = @__(@Autowired))
                                     ^
  symbol: class __
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> java.lang.ExceptionInInitializerError

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 12s
